<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:layout_margin="10dp">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:src="@drawable/img_authenticate" android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_address"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:maxLines="1">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:minLines="1" android:inputType="textPassword"/>

    <CheckBox
        android:id="@+id/auto_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_connect" />

    <Button
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" android:layout_marginTop="5dp" android:enabled="false"/>
    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" android:layout_marginTop="5dp"/>

</LinearLayout>